[project]
name = "all-in-one-style"
description = "all art styles"
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/al-swaiti/All-IN-ONE-style"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "abdallaalsw80"
DisplayName = "All-IN-ONE-style"
Icon = ""
